force-app/main/default/objects/RTL_Upload_Campaign_Member_Import_Log__c/RTL_Upload_Campaign_Member_Import_Log__c.object-meta.xml
<CustomObject>
    <description>Object of completed import campaign member attachment  log (attachment as CSV)</description>
    <label>Upload Campaign Member Import Log</label>
    <nameField>
        <displayFormat>UCML-{00000000}</displayFormat>
        <label>Upload Campaign Member After Import Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTL Upload Campaign Member Import Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>