force-app/main/default/objects/RTL_Upload_Campaign_Member_Import_Log__c/fields/RTL_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_Batch_No__c</fullName>
    <label>RTL Batch No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>