force-app/main/default/objects/RTL_Upload_Campaign_Member_Import_Log__c/fields/RTL_Start_at_Row_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_Start_at_Row_No__c</fullName>
    <label>RTL Start at Row No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>