force-app/main/default/objects/RTL_Upload_Campaign_Member_Import_Log__c/fields/RTL_Total_Ignore__c.field-meta.xml
<CustomField>
    <fullName>RTL_Total_Ignore__c</fullName>
    <label>RTL Total Ignore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>